--- a/setup.cfg
+++ b/setup.cfg
@@ -7,7 +7,7 @@ tag = True
 search = version='{current_version}'
 replace = version='{new_version}'
 
-[bumpversion:file:parseltongue/__init__.py]
+[bumpversion:file:parselglossy/__init__.py]
 search = __version__ = '{current_version}'
 replace = __version__ = '{new_version}'
 
@@ -19,7 +19,7 @@ exclude = docs
 
 [coverage:run]
 source =
-    parseltongue
+    parselglossy
 
 omit =
     env/*
