Set up CI with Azure Pipelines

--- a/tox.ini
+++ b/tox.ini
@@ -18,9 +18,6 @@ setenv =
     PYTHONPATH = {toxinidir}
 deps =
     pipenv
-; Install pip 18.0 to work around pipenv issue. https://github.com/pypa/pipenv/issues/2924
 commands =
-    pipenv run pip install pip==18.0
     pipenv install --dev --ignore-pipfile
-    pipenv run py.test -v
-
+    pipenv run py.test -v tests --doctest-modules --junitxml=junit/test-results.xml
