--- a/Pipfile
+++ b/Pipfile
@@ -3,21 +3,27 @@ url = "https://pypi.python.org/simple"
 verify_ssl = true
 
 [dev-packages]
-bumpversion = "==0.5.3"
-wheel = "==0.30.0"
-watchdog = "==0.8.3"
-flake8 = "==3.5.0"
-tox = "==2.9.1"
-coverage = "==4.5.1"
-pytest = "==3.4.2"
-pytest-runner = "==2.11.1"
-PyInstaller = "==3.3.1"
-Sphinx = "==1.7.1"
-twine = "==1.10.0"
+PyInstaller = "*"
+Sphinx = "*"
+bumpversion = "*"
+coverage = "*"
+epc = "*"
+flake8 = "*"
+importmagic = "*"
+pyls-isort = "*"
+pyls-mypy = "*"
+pytest = "*"
+pytest-dependency = "*"
+pytest-runner = "*"
+python-language-server = "*"
 recommonmark = "*"
 sphinx_rtd_theme = "*"
+tox = "*"
+twine = "*"
+watchdog = "*"
+wheel = "*"
 yapf = "*"
 
 [packages]
-click = "==6.7"
+click = "*"
 pyparsing = "*"
