Force Pipenv to use its own venv
Signed-off-by: Roberto Di Remigio <roberto.diremigio@gmail.com>

--- a/tox.ini
+++ b/tox.ini
@@ -16,6 +16,7 @@ commands = flake8 parselglossy
 [testenv]
 setenv =
     PYTHONPATH = {toxinidir}
+    PIPENV_IGNORE_VIRTUALENVS = 1
 deps =
     pipenv
 commands =
