Do not use Pipfile with tox
Signed-off-by: Roberto Di Remigio <roberto.diremigio@gmail.com>

--- a/tox.ini
+++ b/tox.ini
@@ -1,22 +1,26 @@
 [tox]
-envlist = py36, py37, flake8
+envlist = py34, py35, py36, py37, flake8
 
 [travis]
 python =
     3.7: py37
     3.6: py36
+    3.5: py35
+    3.4: py34
 
 [testenv:flake8]
 basepython = python
-deps = flake8
-commands = flake8 parselglossy
+deps =
+    flake8
+commands =
+    flake8 parselglossy
 
 [testenv]
-setenv =
-    PYTHONPATH = {toxinidir}
-    PIPENV_IGNORE_VIRTUALENVS = 1
 deps =
-    pipenv
+    click
+    pyparsing
+    pytest
+    pytest-dependency
+    pytest-runner
 commands =
-    pipenv install --dev --ignore-pipfile
-    pipenv run py.test -v tests --doctest-modules --junitxml=junit/test-results.xml
+    py.test -v tests --doctest-modules --junitxml=junit/test-results.xml
