--- a/.azure-pipelines.yml
+++ b/.azure-pipelines.yml
@@ -11,6 +11,12 @@ jobs:
       Python36:
         python.version: '3.6'
         pyver: 'py36'
+      Python35:
+        python.version: '3.5'
+        pyver: 'py35'
+      Python34:
+        python.version: '3.4'
+        pyver: 'py34'
     maxParallel: 2
   steps:
   - template: .ci/azure-steps.yml
@@ -26,6 +32,12 @@ jobs:
       Python36:
         python.version: '3.6'
         pyver: 'py36'
+      Python35:
+        python.version: '3.5'
+        pyver: 'py35'
+      Python34:
+        python.version: '3.4'
+        pyver: 'py34'
     maxParallel: 2
   steps:
   - template: .ci/azure-steps.yml
