Tiny revamp of docs set up
- Use .readthedocs.yml to configure RTD build
- Use Guzzle theme rather than alabaster

--- a/Pipfile
+++ b/Pipfile
@@ -16,7 +16,6 @@ pytest-dependency = "*"
 pytest-runner = "*"
 python-language-server = "*"
 recommonmark = "*"
-sphinx_rtd_theme = "*"
 tox = "*"
 twine = "*"
 watchdog = "*"
@@ -26,3 +25,4 @@ yapf = "*"
 [packages]
 click = "*"
 pyparsing = "*"
+guzzle-sphinx-theme = "*"
