--- a/Pipfile
+++ b/Pipfile
@@ -10,12 +10,13 @@ coverage = "*"
 epc = "*"
 flake8 = "*"
 guzzle-sphinx-theme = "*"
+hypothesis = "*"
 importmagic = "*"
+ipython = "*"
 pyls-isort = "*"
 pyls-mypy = "*"
 pytest = "*"
 pytest-cov = "*"
-pytest-runner = "*"
 python-language-server = {extras = ["rope", "pyflakes", "mccabe", "pycodestyle", "pydocstyle", "yapf"],version = "*"}
 twine = "*"
 watchdog = "*"
