--- a/Pipfile
+++ b/Pipfile
@@ -5,6 +5,7 @@ verify_ssl = true
 [dev-packages]
 Sphinx = "*"
 bumpversion = "*"
+codecov = "*"
 coverage = "*"
 epc = "*"
 flake8 = "*"
@@ -12,11 +13,10 @@ importmagic = "*"
 pyls-isort = "*"
 pyls-mypy = "*"
 pytest = "*"
+pytest-cov = "*"
 pytest-dependency = "*"
 pytest-runner = "*"
 python-language-server = "*"
-recommonmark = "*"
-tox = "*"
 twine = "*"
 watchdog = "*"
 wheel = "*"
