--- a/setup.cfg
+++ b/setup.cfg
@@ -16,6 +16,7 @@ universal = 1
 
 [flake8]
 exclude = docs
+max-line-length = 119
 
 [coverage:run]
 source =
@@ -26,6 +27,14 @@ omit =
     venv/*
     .env/*
     .venv/*
+    # Omit the tests
+    */tests/*
+
+[yapf]
+# YAPF, in .style.yapf files this shows up as "[style]" header
+COLUMN_LIMIT = 119
+INDENT_WIDTH = 4
+USE_TABS = False
 
 [aliases]
 # Define setup.py command aliases here
@@ -39,4 +48,3 @@ norecursedirs =
     .venv
 
 collect_ignore = ['setup.py']
-
