--- a/.ci/azure-steps.yml
+++ b/.ci/azure-steps.yml
@@ -5,16 +5,11 @@ steps:
     architecture: 'x64'
 
 - script: |
-    python -m pip install --upgrade pip pipenv
-    pipenv install --three -e .
+    python -m pip install --upgrade pip
+    pip install -U flake8 pytest pytest-cov pytest-dependency codecov
+    pip install -e .
   displayName: 'Install dependencies'
 
 - script: |
-    pipenv run py.test -v parselglossy/tests/ --doctest-modules
+    py.test -v tests/ --doctest-modules
   displayName: 'Running tests'
-
-- task: PublishTestResults@2
-  inputs:
-    testResultsFiles: '**/test-results.xml'
-    testRunTitle: 'Python $(python.version)'
-  condition: succeededOrFailed()
