Add Codecov badge
Signed-off-by: Roberto Di Remigio <roberto.diremigio@gmail.com>

--- a/.ci/azure-steps.yml
+++ b/.ci/azure-steps.yml
@@ -5,7 +5,7 @@ steps:
     architecture: 'x64'
 
 - script: |
-    python -m pip install --upgrade pip
+    pip install --upgrade pip
     pip install -U flake8 pytest pytest-cov pytest-dependency codecov
     pip install -e .
   displayName: 'Install dependencies'
