Use Pipfile only to specify test deps, fix #22
Signed-off-by: Roberto Di Remigio <roberto.diremigio@gmail.com>

--- a/.ci/azure-steps.yml
+++ b/.ci/azure-steps.yml
@@ -6,10 +6,10 @@ steps:
 
 - script: |
     pip install --upgrade pip
-    pip install -U flake8 pytest pytest-cov pytest-dependency codecov
-    pip install -e .
+    pip install -U pipenv
+    pipenv install --dev -e .
   displayName: 'Install dependencies'
 
 - script: |
-    py.test -v tests/ --doctest-modules
+    pipenv run py.test -v tests/ --doctest-modules
   displayName: 'Running tests'
