run pytest with -s so that we can see debug prints if needed
Signed-off-by: Radovan Bast <bast@users.noreply.github.com>

--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,7 @@ install:
 
 script:
   - pipenv run flake8 parselglossy
-  - pipenv run py.test -v --cov=parselglossy tests/ --doctest-module
+  - pipenv run py.test -s -v --cov=parselglossy tests/ --doctest-module
 
 after_success:
   - pipenv run codecov
