--- a/setup.cfg
+++ b/setup.cfg
@@ -1,7 +1,7 @@
 [bumpversion]
-current_version = 0.1.0
-commit = True
-tag = True
+current_version = 0.2.0
+commit = False
+tag = False
 
 [bumpversion:file:setup.py]
 search = version='{current_version}'
@@ -20,30 +20,27 @@ max-line-length = 119
 
 [coverage:run]
 source =
-    parselglossy
-
+	parselglossy
 omit =
-    env/*
-    venv/*
-    .env/*
-    .venv/*
-    # Omit the tests
-    */tests/*
+	env/*
+	venv/*
+	.env/*
+	.venv/*
+	*/tests/*
 
 [aliases]
-# Define setup.py command aliases here
 test = pytest
 
 [tool:pytest]
 norecursedirs =
-    env
-    venv
-    .env
-    .venv
-
+	env
+	venv
+	.env
+	.venv
 collect_ignore = ['setup.py']
 
 [yapf]
 COLUMN_LIMIT = 119
 INDENT_WIDTH = 4
 USE_TABS = False
+
