Continue refactoring of validate.py
Sections should be documented too

Signed-off-by: Roberto Di Remigio <roberto.diremigio@gmail.com>

--- a/tests/validation/input_errors/template.yml
+++ b/tests/validation/input_errors/template.yml
@@ -10,6 +10,8 @@ keywords:
       Some float.
 sections:
   - section: some_section
+    documentation: |
+      Some section.
     keywords:
     - keyword: a_short_string
       type: str
