--- a/tests/validation/template_errors/template_invalid_predicate.yml
+++ b/tests/validation/template_errors/template_invalid_predicate.yml
@@ -10,6 +10,8 @@ keywords:
       Some float.
 sections:
   - section: some_section
+    documentation: |
+      Some section.
     keywords:
     - keyword: a_short_string
       type: str
