--- a/setup.cfg
+++ b/setup.cfg
@@ -18,6 +18,9 @@ universal = 1
 exclude = docs
 max-line-length = 119
 
+[pycodestyle]
+max_line_length = 119
+
 [coverage:run]
 source =
 	parselglossy
