--- a/setup.cfg
+++ b/setup.cfg
@@ -23,27 +23,36 @@ max_line_length = 119
 
 [coverage:run]
 source =
-	parselglossy
+  parselglossy
 omit =
-	env/*
-	venv/*
-	.env/*
-	.venv/*
-	*/tests/*
+  env/*
+  venv/*
+  .env/*
+  .venv/*
+  .direnv/*
+  */tests/*
+  docs/*
+  .eggs/*
+  .git/*
+  .githooks/*
 
 [aliases]
 test = pytest
 
 [tool:pytest]
 norecursedirs =
-	env
-	venv
-	.env
-	.venv
+  env
+  .direnv
+  venv
+  .env
+  .venv
+  docs
+  .eggs
+  .git
+  .githooks
 collect_ignore = ['setup.py']
 
 [yapf]
 COLUMN_LIMIT = 119
 INDENT_WIDTH = 4
 USE_TABS = False
-
