--- a/tests/validation/overall/template.yml
+++ b/tests/validation/overall/template.yml
@@ -1,25 +1,25 @@
 keywords:
   - keyword: title
     type: str
-    documentation: |
+    docstring: |
       Title of the calculation.
       Since there is no default, this keyword is required.
 sections:
   - section: scf
-    documentation: |
+    docstring: |
       SCF input parameters.
     keywords:
     - keyword: functional
       type: str
       predicates:
         - 'len(value) <= 80'
-      documentation: |
+      docstring: |
         XC functional.
         We also test that the string contains max 80 characters.
     - keyword: max_num_iterations
       type: int
       default: 20
-      documentation: |
+      docstring: |
         Max number of iterations.
     - keyword: another_number
       type: int
@@ -28,30 +28,30 @@ sections:
         - '0 <= value <= 40'
         - 'value % 2 == 0'
         - "input_dict['scf']['some_acceleration'] == True"
-      documentation: |
+      docstring: |
         Testing an even number in some range.
     - keyword: some_acceleration
       type: bool
       default: False
-      documentation: |
+      docstring: |
         Turn on the new amazing acceleration scheme.
     - keyword: some_complex_number
       type: complex
       default: 0.0+0.0j
-      documentation: |
+      docstring: |
         Testing input with a complex number.
     sections:
     - section: thresholds
-      documentation: |
+      docstring: |
         Numerical thresholds.
       keywords:
       - keyword: some_integral_screening
         type: float
         default: 0.0001
-        documentation: |
+        docstring: |
           Some integral based threshold.
       - keyword: energy
         type: float
         default: 0.001
-        documentation: |
+        docstring: |
           Some energy based threshold.
