--- a/setup.cfg
+++ b/setup.cfg
@@ -16,10 +16,10 @@ universal = 1
 
 [flake8]
 exclude = docs
-max-line-length = 88
+max-line-length = 119 # FIXME Will switch to 88
 
 [pycodestyle]
-max_line_length = 88
+max_line_length = 119 # FIXME Will swicth to 88
 
 [coverage:run]
 source =
