Remove some dev deps  (#39)

--- a/setup.cfg
+++ b/setup.cfg
@@ -16,9 +16,11 @@ universal = 1
 
 [flake8]
 exclude = docs
+# FIXME Will switch to 88
 max-line-length = 119
 
 [pycodestyle]
+# FIXME Will switch to 88
 max_line_length = 119
 
 [coverage:run]
@@ -51,8 +53,3 @@ norecursedirs =
   .git
   .githooks
 collect_ignore = ['setup.py']
-
-[yapf]
-COLUMN_LIMIT = 119
-INDENT_WIDTH = 4
-USE_TABS = False
