Add more tests for defaulting
Fix #33

Signed-off-by: Roberto Di Remigio <roberto.diremigio@gmail.com>

--- a/setup.cfg
+++ b/setup.cfg
@@ -51,3 +51,9 @@ norecursedirs =
   .git
   .githooks
 collect_ignore = ['setup.py']
+
+[mypy-pytest]
+ignore_missing_imports = True
+
+[mypy-pyparsing]
+ignore_missing_imports = True
