Report messages of failing predicates
Signed-off-by: Roberto Di Remigio <roberto.diremigio@gmail.com>

--- a/setup.cfg
+++ b/setup.cfg
@@ -57,3 +57,7 @@ ignore_missing_imports = True
 
 [mypy-pyparsing]
 ignore_missing_imports = True
+
+[importmagic]
+multiline = 'parentheses'
+max_columns = 88
