Add integration testing
Signed-off-by: Roberto Di Remigio <roberto.diremigio@gmail.com>

--- a/tests/validation/overall/template_all_default.yml
+++ b/tests/validation/overall/template_all_default.yml
@@ -6,6 +6,8 @@ keywords:
       foobar
 sections:
   - name: foo
+    docstring: |
+      babababbarrrr
     keywords:
       - name: bar
         type: bool
