--- a/tests/validation/overall/template_with_default_section.yml
+++ b/tests/validation/overall/template_with_default_section.yml
@@ -5,9 +5,11 @@ keywords:
       foobar
 sections:
   - name: foo
+    docstring: |
+      babababbarrrr
     keywords:
       - name: bar
         type: bool
-        default: true
+        default: false
         docstring: |
           foo.bar
