--- a/setup.cfg
+++ b/setup.cfg
@@ -52,11 +52,9 @@ norecursedirs =
   .githooks
 collect_ignore = ['setup.py']
 
-[mypy-pytest]
+[mypy-pytest,pyparsing,parselglossy.types]
 ignore_missing_imports = True
-
-[mypy-pyparsing]
-ignore_missing_imports = True
+ignore_errors = True
 
 [importmagic]
 multiline = 'parentheses'
