Run flake8 and mypy as testing steps
Signed-off-by: Roberto Di Remigio <roberto.diremigio@gmail.com>

--- a/Pipfile
+++ b/Pipfile
@@ -13,6 +13,8 @@ hypothesis = "*"
 ipython = "*"
 pytest = "*"
 pytest-cov = "*"
+pytest-mypy = "*"
+pytest-flake8 = "*"
 twine = "*"
 watchdog = "*"
 wheel = "*"
