--- a/.travis.yml
+++ b/.travis.yml
@@ -17,8 +17,9 @@ install:
   - pipenv install --dev -e .
 
 script:
-  - pipenv run flake8 parselglossy
-  - pipenv run py.test -s -v --cov=parselglossy tests/ --doctest-module
+  - pipenv run py.test --cov=parselglossy tests/ --doctest-module
+  - pipenv run py.test --flake8 parselglossy
+  - pipenv run py.test --mypy parselglossy
 
 after_success:
   - pipenv run codecov
