Fix test for unquoted strings
- The only valid unquoted strings are ones starting with alphabetic characters and
underscores followed by alphanumeric characters and underscores (like valid C
tokens!)
- The list_t atom tries to match strings - quoted and unquoted - first, then
numeric types. This avoids ambiguities with unquoted strings and boolean atoms.

Signed-off-by: Roberto Di Remigio <roberto.diremigio@gmail.com>

--- a/.ci/azure-steps.yml
+++ b/.ci/azure-steps.yml
@@ -11,5 +11,5 @@ steps:
   displayName: 'Install dependencies'
 
 - script: |
-    pipenv run py.test -s -v tests/ --doctest-modules
+    pipenv run py.test -svvv tests/ --doctest-modules
   displayName: 'Running tests'
