--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -4,9 +4,10 @@ formats:
   - pdf
 python:
   version: 3.6
-   install:
-      - requirements: docs/requirements.txt
+  install:
+    - requirements: docs/requirements.txt
+    - method: pip
+      path: .
 sphinx:
   builder: html
   configuration: docs/conf.py
-
