--- a/.ci/azure-steps.yml
+++ b/.ci/azure-steps.yml
@@ -11,5 +11,5 @@ steps:
   displayName: 'Install dependencies'
 
 - script: |
-    pipenv run py.test -svvv tests/ --doctest-modules
+    pipenv run py.test -svvv tests/
   displayName: 'Running tests'
