--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,8 @@ dist: xenial
 
 language: python
 
+cache: pip
+
 python:
   - 3.6
   - 3.7
@@ -13,12 +15,13 @@ env:
 install:
   - pip install --upgrade pip
   - pip install -U pipenv
-  - pipenv install --dev -e .
+  - pipenv install --dev
 
 script:
-  - pipenv run py.test --cov=parselglossy tests/ --doctest-module
-  - pipenv run py.test --flake8 parselglossy
-  - pipenv run py.test --mypy parselglossy
+  - pipenv run python -m pytest --cov=parselglossy tests/ --doctest-modules
+  - pipenv run python -m pytest --flake8 parselglossy
+  - pipenv run python -m pytest --black parselglossy
+  - pipenv run python -m pytest --mypy parselglossy
 
 after_success:
   - pipenv run codecov
