--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -21,13 +21,13 @@ jobs:
         python-version: ${{ matrix.python-version }}
     - name: Install dependencies
       run: |
-        python -m pip install --upgrade pip pipenv
-        pipenv install --dev
+        python -m pip install --upgrade pip poetry
+        poetry install -v
     - name: Test with pytest
       run: |
-        pipenv run python -m pytest --cov=parselglossy --cov-report=xml --doctest-modules tests/
-        pipenv run python -m pytest --flake8 parselglossy
-        pipenv run python -m pytest --black parselglossy
-        pipenv run python -m pytest --mypy parselglossy
+        poetry run python -m pytest --cov=parselglossy --cov-report=xml --doctest-modules tests/
+        poetry run python -m pytest --flake8 parselglossy
+        poetry run python -m pytest --black parselglossy
+        poetry run python -m pytest --mypy parselglossy
     - name: Upload coverage to Codecov
       uses: codecov/codecov-action@v1
