--- a/setup.cfg
+++ b/setup.cfg
@@ -2,7 +2,12 @@
 universal = 1
 
 [flake8]
-exclude = docs,tests
+exclude =
+    .git,
+    __pycache__,
+    docs,
+    tests,
+    parselglossy/grammars/pyparsing.py
 max-line-length = 88
 
 [pycodestyle]
@@ -37,7 +42,7 @@ norecursedirs =
   .git
 collect_ignore = ['setup.py']
 
-[mypy-pytest,pyparsing,parselglossy.types]
+[mypy-pytest,pyparsing,parselglossy.types,parselglossy.grammars.pyparsing]
 ignore_missing_imports = True
 ignore_errors = True
 
