Exclude Python 3.8 on macOS
Signed-off-by: Roberto Di Remigio <roberto.diremigio@gmail.com>

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -12,6 +12,9 @@ jobs:
       matrix:
         os: [ubuntu-latest, macos-latest, windows-latest]
         python-version: [3.6, 3.7, 3.8]
+        exclude:
+          - os: macos-latest
+            node: 3.8
 
     steps:
     - uses: actions/checkout@v2
