--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -14,7 +14,7 @@ jobs:
         python-version: [3.6, 3.7, 3.8]
         exclude:
           - os: macos-latest
-            node: 3.8
+            python-version: 3.8
 
     steps:
     - uses: actions/checkout@v2
