--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,12 +19,11 @@ jobs:
         python-version: '3.x'
     - name: Install dependencies
       run: |
-        python -m pip install --upgrade pip poetry
-    - name: Build and publish
+        python -m pip install --upgrade pip flit 
+    - name: Flit publish
       env:
-        TWINE_USERNAME: ${{ secrets.PYPI_USERNAME }}
-        TWINE_PASSWORD: ${{ secrets.PYPI_PASSWORD }}
+        FLIT_USERNAME: ${{ secrets.PYPI_USERNAME }}
+        FLIT_PASSWORD: ${{ secrets.PYPI_PASSWORD }}
+#       FLIT_INDEX_URL: https://test.pypi.org/legacy/
       run: |
-        poetry config http-basic.pypi ${{ secrets.PYPI_USERNAME }} ${{ secrets.PYPI_PASSWORD }}
-        poetry build
-        poetry publish
+        flit publish
