--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,5 +35,28 @@ classifiers = [
   "Operating System :: OS Independent",
 ]
 
+[tool.flit.metadata.requires-extra]
+test = [
+    "codecov",
+    "coverage",
+    "hypothesis",
+    "pytest",
+    "pytest-black",
+    "pytest-cov",
+    "pytest-flake8",
+    "pytest-mypy",
+    "pytest-sugar",
+]
+dev = [
+    "black",
+    "flake8",
+    "isort",
+    "mypy",
+]
+doc = [
+    "sphinx",
+    "guzzle_sphinx_theme",
+]
+
 [tool.flit.scripts]
 parselglossy = "parselglossy.cli:cli"
