--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ requires=[
     "click",
     "pyparsing",
     "pyyaml",
+    "networkx",
 ]
 requires-python = "~=3.6"
 description-file = "README.rst"
