--- a/setup.cfg
+++ b/setup.cfg
@@ -42,7 +42,7 @@ norecursedirs =
   .git
 collect_ignore = ['setup.py']
 
-[mypy-pytest,pyparsing,parselglossy.types,parselglossy.grammars.pyparsing]
+[mypy-pytest,networkx,pyparsing,parselglossy.types,parselglossy.grammars.pyparsing]
 ignore_missing_imports = True
 ignore_errors = True
 
