--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -2,7 +2,14 @@ name: Test parselglossy
 
 on:
   push:
+    branches:
+      - master
   pull_request:
+    branches:
+      - master
+  release:
+    types:
+      - created
 
 jobs:
   build:
