--- a/pyproject.toml
+++ b/pyproject.toml
@@ -66,7 +66,7 @@ test = [
     "pytest-sugar",
 ]
 dev = [
-    "black",
+    "black==19.10b0",  # NOTE We pin black to avoid inconsistent formatting (and failing CI)
     "flake8",
     "isort",
     "mypy",
