--- a/setup.cfg
+++ b/setup.cfg
@@ -7,7 +7,6 @@ exclude =
     __pycache__,
     docs,
     tests,
-    parselglossy/grammars/pyparsing.py
 max-line-length = 88
 
 [pycodestyle]
@@ -42,7 +41,7 @@ norecursedirs =
   .git
 collect_ignore = ['setup.py']
 
-[mypy-pytest,networkx,pyparsing,parselglossy.types,parselglossy.grammars.pyparsing]
+[mypy-pytest,networkx,pyparsing,parselglossy.types]
 ignore_missing_imports = True
 ignore_errors = True
 
