--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ use_parentheses = true
 line_length = 88
 
 [tool.pytest.ini_options]
-addopts = "-rws"
+addopts = "-rws --ignore=setup.py"
 testpaths = [
     "tests",
 ]
@@ -20,7 +20,6 @@ norecursedirs = [
   ".eggs",
   ".git",
 ]
-collect_ignore = ["setup.py"]
 
 [build-system]
 requires = ["flit_core >=2,<4"]
