--- a/setup.cfg
+++ b/setup.cfg
@@ -39,7 +39,7 @@ norecursedirs =
   docs
   .eggs
   .git
-collect_ignore = ['setup.py']
+addopts = --ignore=setup.py
 
 [mypy-pytest,networkx,pyparsing,parselglossy.types]
 ignore_missing_imports = True
