--- a/pyproject.toml
+++ b/pyproject.toml
@@ -48,7 +48,7 @@ requires=[
     "pyyaml",
     "networkx",
 ]
-requires-python = "~=3.6"
+requires-python = "~=3.7"
 description-file = "README.rst"
 home-page = "https://parselglossy.readthedocs.io"
 classifiers = [
@@ -80,6 +80,7 @@ dev = [
     "flake8",
     "isort",
     "mypy",
+    "types-PyYAML",
 ]
 doc = [
     "sphinx",
