--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,15 @@ norecursedirs = [
 [tool.mypy]
 warn_return_any = true
 warn_unused_configs = true
+disallow_incomplete_defs = true
+show_column_numbers = true
+show_error_context = true
+show_error_codes = true
+check_untyped_defs = true
+warn_unused_ignores = true
+strict_optional = false
+no_implicit_optional = true
+warn_redundant_casts = true
 
 [[tool.mypy.overrides]]
 module = [
