--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,20 +1,21 @@
 repos:
   - repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v2.1.0
+    rev: v4.3.0
     hooks:
       - id: check-case-conflict
       - id: check-merge-conflict
       - id: fix-encoding-pragma
-  - repo: https://github.com/pre-commit/mirrors-isort
-    rev: v4.3.17
+  - repo: https://github.com/pycqa/isort
+    rev: 5.10.1
     hooks:
       - id: isort
+        name: isort (python)
   - repo: https://github.com/psf/black
     rev: 22.3.0
     hooks:
       - id: black
   - repo: https://github.com/Lucas-C/pre-commit-hooks
-    rev: v1.1.6
+    rev: v1.3.0
     hooks:
       - id: insert-license
         files: \.py$
