--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -13,34 +13,44 @@ on:
 
 jobs:
   build:
+    env:
+      HYPOTHESIS_PROFILE: "ci"
 
     runs-on: ${{ matrix.os }}
+
     strategy:
       matrix:
         os: [ubuntu-latest, macos-latest, windows-latest]
-        python-version: [3.6, 3.7, 3.8]
+        python-version: [3.7, 3.8, 3.9, "3.10"]
 
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
+
       - name: Set up Python ${{ matrix.python-version }}
-        uses: actions/setup-python@v1
+        uses: actions/setup-python@v4
         with:
           python-version: ${{ matrix.python-version }}
+
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip flit
           flit install --symlink --extras=dev,test --deps=production
+
       - name: Test with pytest
         run: |
           python -m pytest --cov=parselglossy --cov-report=xml --doctest-modules tests/
+
       - name: Flake8 lints
         run: |
           python -m pytest --flake8 parselglossy
+
       - name: Black lints
         run: |
           python -m pytest --black parselglossy
+
       - name: Mypy lints
         run: |
           python -m pytest --mypy parselglossy
+
       - name: Upload coverage to Codecov
-        uses: codecov/codecov-action@v1
+        uses: codecov/codecov-action@v3
