--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,11 +5,8 @@ force_grid_wrap = 0
 use_parentheses = true
 line_length = 88
 
-[tool.black]
-exclude = 'pyparsing.py'
-
 [tool.pytest.ini_options]
-addopts = "-rws"
+addopts = "-rws --ignore=setup.py"
 testpaths = [
     "tests",
 ]
@@ -23,7 +20,28 @@ norecursedirs = [
   ".eggs",
   ".git",
 ]
-collect_ignore = ["setup.py"]
+
+[tool.mypy]
+warn_return_any = true
+warn_unused_configs = true
+disallow_incomplete_defs = true
+show_column_numbers = true
+show_error_context = true
+show_error_codes = true
+check_untyped_defs = true
+warn_unused_ignores = true
+strict_optional = false
+no_implicit_optional = true
+warn_redundant_casts = true
+
+[[tool.mypy.overrides]]
+module = [
+    "networkx",
+    "pyparsing",
+    "parselglossy.types",
+]
+ignore_missing_imports = true
+ignore_errors = true
 
 [build-system]
 requires = ["flit_core >=2,<4"]
@@ -35,11 +53,11 @@ license = "MIT"
 author = "Roberto Di Remigio"
 requires=[
     "click",
-    "pyparsing",
+    "pyparsing~=3.0",
     "pyyaml",
     "networkx",
 ]
-requires-python = "~=3.6"
+requires-python = "~=3.7"
 description-file = "README.rst"
 home-page = "https://parselglossy.readthedocs.io"
 classifiers = [
@@ -47,9 +65,10 @@ classifiers = [
   "License :: OSI Approved :: MIT License",
   "Natural Language :: English",
   "Programming Language :: Python :: 3",
-  "Programming Language :: Python :: 3.6",
   "Programming Language :: Python :: 3.7",
   "Programming Language :: Python :: 3.8",
+  "Programming Language :: Python :: 3.9",
+  "Programming Language :: Python :: 3.10",
   "Operating System :: OS Independent",
 ]
 
@@ -66,14 +85,17 @@ test = [
     "pytest-sugar",
 ]
 dev = [
-    "black==19.10b0",  # NOTE We pin black to avoid inconsistent formatting (and failing CI)
+    "black==22.3.0",  # NOTE We pin black to avoid inconsistent formatting (and failing CI)
     "flake8",
     "isort",
     "mypy",
+    "types-PyYAML",
 ]
 doc = [
     "sphinx",
-    "guzzle_sphinx_theme",
+    "furo",
+    "sphinx-copybutton",
+    "sphinx-inline-tabs",
 ]
 
 [tool.flit.scripts]
